--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-tailwind-template",
+  "name": "covid-info-ph",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -17,9 +17,10 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/composition-api": "^0.19.1",
     "core-js": "^3.8.3",
-    "numeral": "^2.0.6",
+    "numeral": ">=2",
     "nuxt": "^2.14.12",
     "vue-feather-icons": "^5.1.0",
+    "vue-numeral-filter": "^2.0.0",
     "vue-tailwind": "^2.1.1"
   },
   "devDependencies": {
